# news-breaker

./: logging.yml  pyproject.toml
news_breaker/: article_summarizer.py  article_summarizer_v2.py  browser.py  config.py  facebook.py  get_elements.py  main.py
news_breaker/models/: loggable.py
news_breaker/utils/: browser.py  logger.py
notebooks/: fb-class.ipynb  fb.ipynb  langchain-without-agent.ipynb  langchain.ipynb
